--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,15 @@
 {
-    "C_Cpp.errorSquiggles": "disabled"
+    "C_Cpp.errorSquiggles": "disabled",
+    "cSpell.words": [
+        "cerr",
+        "endl",
+        "fstream",
+        "getline",
+        "ifstream",
+        "iostream",
+        "istringstream",
+        "sstream",
+        "stod",
+        "stoi"
+    ]
 }
