git commit <update files>

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,6 +5,7 @@
         "endl",
         "fstream",
         "getline",
+        "ifndef",
         "ifstream",
         "iostream",
         "istringstream",
